# senime

./: .gitignore  Cargo.toml  README.md  compile_commands.json  flake.nix
.github/workflows/: deploy-pages.yml  deploy-senime-web.yml
examples/: lsp.rs  tui.rs
scripts/: generate-emoji-dict.py
senime-browser-extension/: Cargo.toml  README.md
senime-browser-extension/extension/: background.html  background.js  content.js  manifest.json  options.css  options.html  options.js
senime-browser-extension/src/: lib.rs
senime-encode/: Cargo.toml
senime-encode/src/: main.rs
senime-fcitx5/: CMakeLists.txt  Cargo.toml
senime-fcitx5/data/fcitx5/addon/: senime.conf  senime.conf.in
senime-fcitx5/data/fcitx5/inputmethod/: senime.conf.in
senime-fcitx5/data/inputmethod/: senime.conf
senime-fcitx5/include/: senime_fcitx5.h
senime-fcitx5/po/: CMakeLists.txt  en.po  senime.pot  zh_CN.po
senime-fcitx5/src/: engine.cpp  engine.h  keysym.rs  lib.rs
senime-lib/: Cargo.toml
senime-lib/src/: dict.rs  fuzz_dict.rs  fuzz_search.feat  input_analyzer.rs  lib.rs  lookup_code.rs  prefix_dict.rs  test_utils.rs  util.rs  watcher.rs
senime-lsp/: Cargo.toml
senime-lsp/src/: main.rs
senime-tui/: Cargo.toml
senime-tui/src/: context.rs  js.rs  main.rs  measurement.rs  popup.rs  sentence.rs
senime-wasm/: Cargo.toml
senime-wasm/senime-web/: .env  .env.remote  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
senime-wasm/senime-web/assets/tables/: index.txt  test.txt
senime-wasm/senime-web/src/: App.tsx  db.ts  main.ts  style.css
senime-wasm/senime-web/src/components/: ActionBar.tsx  DictLoader.tsx  InputArea.tsx
senime-wasm/senime-web/src/hooks/: useCursorPos.ts  useDictLoader.ts  useIme.ts  useTheme.ts
senime-wasm/src/: lib.rs
src/: dict.rs  input_alanyzer.rs  input_analyzer.rs  lib.rs  main.rs  trie.rs
test/: 虎码码表.txt
