[package]
name = "senime-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "senimels"
include = ["src/**/*", "README.md"]

[[bin]]
name = "senimels"
path = "src/main.rs"

[dependencies]
senime-lib = { path = "../senime-lib" }
clap = { version = "4.5.35", features = ["derive"] }
dashmap = "6.1.0"
ropey = "1.6.1"
tower-lsp = "0.20.0"
tokio = { version = "1.49.0", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  # "net",
  # "parking_lot",
  # "process",
  # "rt",
  "rt-multi-thread",
  "signal",
  # "sync",
  # "time",
]}
log = "0.4.29"
simple-logging = "2.0.2"
serde_json = "1.0.148"
