[package]
name = "senime-tui"
version = "0.1.0"
edition = "2024"
default-run = "senitui"
include = ["src/**/*", "README.md"]

[[bin]]
name = "senitui"
path = "src/main.rs"

[dependencies]
senime-lib = { path = "../senime-lib" }
clap = { version = "4.5.35", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
unicode-width = "0.2.2"
derive_setters = "0.1.8"
