[package]
name = "senime-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "senitui"
include = ["src/**/*", "README.md"]

[[bin]]
name = "senitui"
path = "src/main.rs"

[dependencies]
senime-lib = { path = "../senime-lib" }
clap = { version = "4.5.35", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
unicode-width = "0.2.2"
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"
# derive_setters = "0.1.8"
# unicode-segmentation = "1.12.0"
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
aes = "0.8.4"
cbc = "0.1.2"
block-padding = "0.3.3"
base64 = "0.22.1"
ureq = { version = "3.0.14", default-features = false, features = ["rustls"] }
toml = "0.9.11"
