[package]
name = "senime-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
include = ["src/**/*", "README.md"]

[lib]
crate-type = ["cdylib"]

[dependencies]
senime-lib = { path = "../senime-lib" }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_json = "1"
